Finally decided that all type defs including views should share a common Java impl TypeDefn.java. Working out the notion of a ProjectionDecl which is continguous subset of the type/assoc/var graph.